package com.auction.client.model;

public interface Entity {
    String getId();
    void setId(String id);
}